price_scrapper_front/src/components/Header/Header.css
.nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #2c56e0;
    text-align: center;
  }
    
  nav ul li {
    display: inline-block;
  }
    
  nav a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 40px 17px 40px;
    text-decoration: none;
  }

  nav li a:hover {
    background-color: white;
    color: #3048cc;
    border-radius: 30px;
  }

  .navbar {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1;
  }

  #logoutBtn:hover {
    background-color: white;
    color: blue;
  }

  #logoutBtn {
    border-radius: 30px;
    padding: 14px 40px 16px 40px;
    width: 100px;
    height: 48px;
  }

